add new api confirm-receipt and received
